# SzoaDel

./: .gitignore  README.md  download_real_data.py  extract_llm_data.py  hf_upload.py  pyproject.toml  run_benchmark.sh  run_experiments.sh  run_llm_sweep.py  run_real_benchmark.sh  run_sweep.py
SpaDE/: benchmark_plot.py  benchmark_plot_detailed.py  data_utils.py  df.csv  find_concepts.py  find_concepts_llm.py  latent_color_distance_correlation.py  main.py  models.py  plot.ipynb  run_experiments.py  visualize_pca.py
pca_plots/: plot.ipynb
reference_colors_plots/: latent_color_distance_correlation.py  plot.ipynb
white obejcts/: color_img.py
