[project]
name = "szoadel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "datasets==3.0.0",
    "fiftyone>=1.11.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "seaborn>=0.13.2",
    "timm>=1.0.24",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]
